// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page photo should load and render photos 1`] = `
.c4 {
  margin: 2rem 0;
  -webkit-animation: jBcSpD 800ms ease-in-out infinite alternate;
  animation: jBcSpD 800ms ease-in-out infinite alternate;
}

.c4:after {
  background: var(--primary-normal);
  border-radius: 50%;
  content: '';
  display: block;
  height: 1rem;
  width: 1rem;
  margin: 0 auto;
}

.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--primary-normal);
  color: white;
}

.c3 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c3 + .c2 {
  margin: 0 0 0 0.8rem;
}

.c3:hover {
  background: var(--primary-lighter);
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0 0 2rem;
}

.c0 > h1 {
  line-height: 1.835;
  margin: 0;
}

.c0 > h1 > span {
  color: var(--gray-darker);
  font-size: 2rem;
  font-weight: normal;
  line-height: 1;
}

.c1 {
  font-size: 2.4rem;
  margin: 0 0 2.4rem;
  font-weight: 500;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1"
    >
      Your photos 
      <span>
        (
        )
      </span>
    </h1>
    <button
      class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c2 c3"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`Page photo should load and render photos 2`] = `
<div>
  <div
    class="Liststyles__ListHeader-xqxatx-1 krhEeR"
  >
    <h1
      class="Headingsstyles__Heading1-sc-1iu4nvl-0 jrAkIu"
    >
      Your photos 
      <span>
        (
        184
        )
      </span>
    </h1>
    <button
      class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 Buttonsstyles__PrimaryButton-jpizpn-2 dLlVPE"
    >
      Add a new photo
      <svg
        height="14"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.984 12.984h-6v6h-1.97v-6h-6v-1.97h6v-6h1.97v6h6v1.97z"
        />
      </svg>
    </button>
  </div>
  .c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: none;
  color: inherit;
  padding: 0.8rem;
}

.c8 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c8 + .c7 {
  margin: 0 0 0 0.8rem;
}

.c8 > svg {
  margin: 0;
}

.c8 + .c7 {
  margin: 0;
}

.c0 {
  margin: 0;
  padding: 0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-columns: 8rem auto 12rem;
  grid-column-gap: 1rem;
  padding: 1.4rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
}

.c2:hover {
  background: var(--secondary-lighter);
}

.c2 + .c1 {
  border-top: 1px solid var(--secondary-normal);
}

.c3 {
  height: 8rem;
}

.c3 img {
  height: 100%;
  object-fit: contain;
  width: 100%;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  color: var(--gray-darker-2);
  font-size: var(--font-size-smaller);
}

.c6 {
  place-self: center flex-end;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c6 button {
  opacity: 0.5;
  -webkit-transition: opacity 150ms ease-out;
  transition: opacity 150ms ease-out;
}

.c6 button:hover {
  opacity: 1;
}

<ul
    class="c0"
  >
    <li
      class="c1 c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        
        <p
          class="c5"
        >
          Février 2019
        </p>
      </div>
      <p
        class="c6"
      >
        <button
          class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c7 c8"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c7 c8"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
    <li
      class="c1 c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        
        <p
          class="c5"
        >
          Janvier 2019
        </p>
      </div>
      <p
        class="c6"
      >
        <button
          class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c7 c8"
          title="Edit"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 24 28"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.672 24l1.422-1.422-3.672-3.672-1.422 1.422v1.672h2v2h1.672zM13.844 9.5c0-0.203-0.141-0.344-0.344-0.344-0.094 0-0.187 0.031-0.266 0.109l-8.469 8.469c-0.078 0.078-0.109 0.172-0.109 0.266 0 0.203 0.141 0.344 0.344 0.344 0.094 0 0.187-0.031 0.266-0.109l8.469-8.469c0.078-0.078 0.109-0.172 0.109-0.266zM13 6.5l6.5 6.5-13 13h-6.5v-6.5zM23.672 8c0 0.531-0.219 1.047-0.578 1.406l-2.594 2.594-6.5-6.5 2.594-2.578c0.359-0.375 0.875-0.594 1.406-0.594s1.047 0.219 1.422 0.594l3.672 3.656c0.359 0.375 0.578 0.891 0.578 1.422z"
            />
          </svg>
        </button>
        <button
          class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 c7 c8"
          title="Delete"
        >
          <svg
            height="16"
            version="1.1"
            viewBox="0 0 22 28"
            width="22"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM12 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM16 21.5v-11c0-0.281-0.219-0.5-0.5-0.5h-1c-0.281 0-0.5 0.219-0.5 0.5v11c0 0.281 0.219 0.5 0.5 0.5h1c0.281 0 0.5-0.219 0.5-0.5zM7.5 6h7l-0.75-1.828c-0.047-0.063-0.187-0.156-0.266-0.172h-4.953c-0.094 0.016-0.219 0.109-0.266 0.172zM22 6.5v1c0 0.281-0.219 0.5-0.5 0.5h-1.5v14.812c0 1.719-1.125 3.187-2.5 3.187h-13c-1.375 0-2.5-1.406-2.5-3.125v-14.875h-1.5c-0.281 0-0.5-0.219-0.5-0.5v-1c0-0.281 0.219-0.5 0.5-0.5h4.828l1.094-2.609c0.313-0.766 1.25-1.391 2.078-1.391h5c0.828 0 1.766 0.625 2.078 1.391l1.094 2.609h4.828c0.281 0 0.5 0.219 0.5 0.5z"
            />
          </svg>
        </button>
      </p>
    </li>
  </ul>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  list-style-type: none;
  width: 100%;
  padding: 0;
}

.c0 > li {
  margin: 0 0.4rem;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  border: none;
  color: currentColor;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: var(--font-family);
  outline: none;
  padding: 0;
  margin: 0;
  border-radius: 0.2rem;
  font-size: var(--font-size-smaller);
  line-height: 1.3333333;
  padding: 1.6rem;
  -webkit-transition: background 150ms ease-out;
  transition: background 150ms ease-out;
  background: var(--secondary-normal);
  color: var(--text-normal);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--font-size-normal);
  height: 4.4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  width: 4.4rem;
}

.c2 > svg {
  margin: 0 -0.4rem 0 0.4rem;
}

.c2 + .c1 {
  margin: 0 0 0 0.8rem;
}

.c2:hover {
  background: var(--secondary-darker);
}

.c2 + .c3 {
  margin-left: 0.8rem;
}

<ul
    class="c0"
  >
    <li>
      <button
        class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 Buttonsstyles__SecondaryButton-jpizpn-4 c1 c2"
        title="Next page"
      >
        »
      </button>
    </li>
    <li>
      <button
        class="Buttonsstyles__DefaultButton-jpizpn-0 Buttonsstyles__StyledButton-jpizpn-1 Buttonsstyles__SecondaryButton-jpizpn-4 c1 c2"
        title="Last page"
      >
        »»
      </button>
    </li>
  </ul>
</div>
`;
